freemed project changelog
($Id$)

* Thu Jun 14 2001 rufustfirefly
  - general include -> include_once overhaul for many modules,
    but never enough
  - lib/xml.php: working on EMR generation code; more of the record
    is being generated
  - lang/registry: added spanish and german to language registry
  - index.php: fixed language registry read
  - module*.php: include -> include_once

* Wed Jun 13 2001 rufustfirefly
  - TODO: updated todo list to be a little bit more current
  - doc/MODULE_API: added initial modular API documentation
  - lib/xml.php: implemented skeletal XML creation
  - NOTE - The next CVS release will most likely be the last CVS
    release before 0.2.2 (or 0.3, depending on the XML EMR status)
  - lib/freemed.php: updated version number to 0.2.1.3, set
    tentative name to "Bread and Butter" for next release

* Mon Jun 11 2001 rufustfirefly
  - added spanish translation catalog from Alejandro Fernandez
    <soprte@linuxya.com>

* Tue Jun 05 2001 rufustfirefly
  - patient.php: fixed passing of email in notebook
  - modules/progress_notes.emr.module.php: modify now works properly

* Mon Jun 04 2001 rufustfirefly
  - lib/API.php, patient.php: some fixes for there being no good
    array flattening in php, as well as update moving to
    update_query wrapper. phone number handling supposedly fixed. :)

* Thu May 31 2001 rufustfirefly
  - lib/xml.php - stubs for XML import and export functions

* Mon May 21 2001 rufustfirefly
  - updated german translation from Dr. Roesler

* Fri May 18 2001 fforest
  - API fm_make_string_array added to make sure
    a string contains a colon if not one is appened
  - generate_forms missing a </B>
  - insurance_company maint. calls fm_string_array to ensure 
    and inscomod value of 17 is changed to 17: so value_in_string
    function will parse is as an array for the multiple_choice box.
  - procedure module. removed the verification for a primary 
    insurance. patient may be rich and is paying the bill 